# FastApiLessons

Ex1/: main.py
Ex2/: .env  .env-test  .gitignore  Api_v1.py  celerybeat-schedule  dependencies.py  main.py  pyproject.toml  pytest.ini  requirements.txt
Ex2/src/: config.py  database.py  exceptions.py  init.py  main.py
Ex2/src/api/: Api_v1.py  auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
Ex2/src/connectors/: cache_decorator.py  redis_connector.py  resis_connector.py
Ex2/src/migrations/: env.py
Ex2/src/migrations/versions/: 1c40aa340890_add_rooms.py  2025_01_14_1606-2897de87c9ef_add_rooms.py  2025_01_15_2153-12d8662b321a_zero_to_hero.py  2025_01_27_1853-4c903b896b24_add_users_table.py  2025_01_27_1938-51acbbd5bb77_fix.py  2025_01_27_2325-657cd4ee8425_fix_hashed_password.py  2025_01_27_2328-a2166a078473_fix_hashed_password.py  2025_01_27_2343-eeb107ee34dc_unique_columns.py  2025_01_30_1844-7e28959a8033_newdatabase.py  2025_02_04_2344-76626a11cd0c_add_book.py  2025_02_04_2345-6223dec78b65_add_book2.py  2025_02_04_2346-4b91df78a593_add_book2.py  2025_02_04_2346-7f90d19623c1_add_book2.py  2025_02_04_2346-92c319fb834b_add_book2.py  2025_02_04_2356-97ccbfc111ad_add_booking.py  2025_02_05_1919-cfb6ed271b1a_add_booking.py  2025_02_05_2015-234ccd20294d_add_booking.py  (+11 more)
Ex2/src/models/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
Ex2/src/repos/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  rooms_facilities.py  users.py  utils.py
Ex2/src/schemas/: bookings.py  rooms.py  users.py
Ex2/src/services/: auth.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
Ex2/src/tasks/: celery_app.py  tasks.py
Ex2/src/utils/: db_manager.py
Ex2/tests/: conftest.py
Ex2/tests/integration_tests/: test_auth.py
Ex2/tests/mock_data/: mock_rooms.json
Ex2/tests/unit_tests/: test_auth.py
(+38 files in other folders)
