[project]
name = "Ex2"
version = "0.1.0"
description = "Lesosn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis==1.3.1",
    "alembic==1.14.1",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "billiard==4.2.1",
    "celery==5.4.0",
    "cffi==1.17.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "crontab==1.0.1",
    "cryptography==44.0.2",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.11",
    "fastapi-cache2==0.2.2",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "hiredis==3.1.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "kombu==5.4.2",
    "mako==1.3.9",
    "markupsafe==3.0.2",
    "packaging==24.2",
    "passlib==1.7.4",
    "pendulum==3.0.0",
    "pillow==11.1.0",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.50",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "pyjwt>=2.10.1",
    "pytest==8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-dotenv==0.5.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.38",
    "starlette==0.46.0",
    "time-machine==2.16.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "uvicorn==0.34.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
]

[tool.pyright]
executionEnvironments = [{ root = "backend/src/" }]
# typeCheckingMode = "standard"
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."


[tool.ruff]
line-length = 88


[tool.ruff.format]
quote-style = "single"
